--- a/templates/main.html
+++ b/templates/main.html
@@ -3,29 +3,23 @@
 {% load static from staticfiles %}
 
 {% block content %}
-{% if data.status == "like" %}
 <div class="mainmenu-area" data-spy="affix" data-offset-top="100">
     <div class="container">
         <!--Logo-->
         <div class="navbar-header">
+          {% if data.status == "like" %}
             <a href="{% url 'main' %}" class="navbar-brand logo">
                 <h2>movie</h2>
             </a>
-        </div>
-    </div>
-</div>
-{% else %}
-<div class="mainmenu-area" data-spy="affix" data-offset-top="100">
-    <div class="container">
-        <!--Logo-->
-        <div class="navbar-header">
+          {% else %}
             <a href="{% url 'dis' %}" class="navbar-brand logo">
                 <h2>movie</h2>
             </a>
+          {% endif %}
         </div>
     </div>
 </div>
-{% endif %}
+
 
 <section class="white-bg section-padding" id="feature-page">
     <div class="container">
@@ -66,7 +60,7 @@
                         <img src={{ value.poster_path }} alt="">
                     </div>
                     <h3 id="myVar">{{ value.original_title }}</h3>
-                    <a href="" class="button" onclick="iterMovie('{{value.original_title}}')">Select</a>
+                    <a href="#" class="button" onclick="iterMovie('{{value.original_title}}')">Select</a>
                 </div>
             </div>
             {% endfor %}
@@ -91,8 +85,6 @@
       document.getElementById("left").innerHTML = num + " LEFT"
 
       function iterMovie(title) {
-
-        // var title = document.getElementById("myVar").innerHTML;
 
         if (sessionStorage.count) {
           sessionStorage.count = Number(sessionStorage.count) + 1;
@@ -121,7 +113,9 @@
           sessionStorage.setItem("movie1", title);
           window.location=window.location;
         }
+        return false;
       }
+
 
     </script>
 
